add forget-password, reset-password routes, update error handler function,fix some bug
