# backend/src/routes/userRoutes.ts
@@ -1,12 +1,20 @@
 import express from 'express';
-import { signUp, login, verifyEmail, getAllUsers } from '../controllers/UserController';
+import {
+  getAllUsers,
+  signUp,
+  login,
+  verifyEmail,
+  forgotPassword,
+  resetPassword,
+} from '../controllers/UserController';
 
 const router = express.Router();
 
+router.get('/users', getAllUsers);
 router.post('/signup', signUp);
 router.post('/login', login);
 router.put('/verfiy-email', verifyEmail);
-
-router.get('/', getAllUsers);
+router.put('/forgot-password', forgotPassword);
+router.put('/reset-password', resetPassword);
 
 export default router;
